Fix for BackgroundLoaderOffliner::OnlySavesOnceOnMultipleLoads flake?

BUG=712565

Review-Url: https://codereview.chromium.org/2825823003
Cr-Commit-Position: refs/heads/master@{#465353}

Former-commit-id: 02aac2715c6e86bd7a4c81290df414e3269d7f31